--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <header>
 	<div class="row banner">
          <div class="banner-text">
-            <h1 >I'm Shiva Raju.</h1>	
+            <h1 >Hi,I'm Shiva Raju.</h1>	
             <h3>I'm a Developer, I love to build and design things. I have experiences in <span>Web Development</span>, <span>Android</span>, <span>Hacking</span>. I am undrgraduate student in <span>National Institute of Technology,Surat</span> studying <span>Electronics Engineering.</span></h3>
             <hr />
             <ul class="social">
