--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="row banner">
          <div class="banner-text">
             <h1 >Hi,I'm Shiva Raju.</h1>	
-            <h3>I'm a Developer, I love to build and design things. I have experiences in <span>Web Development</span>, <span>Android</span>, <span>Hacking</span>. I am undrgraduate student in <span>National Institute of Technology,Surat</span> studying <span>Electronics Engineering.</span></h3>
+            <h3>I'm a Developer, I love to build and design things. I have experiences in <span>Web Development</span>, <span>Android</span>, <span>Hacking</span>. I am undegraduate student in <span>National Institute of Technology,Surat</span> studying <span>Electronics Engineering.</span></h3>
             <hr />
             <ul class="social">
                <li><a href="https://www.facebook.com/shivaraju.1357"><i class="fa fa-facebook"></i></a></li>
