--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                <li><a href="https://www.instagram.com/shivaraju_kiddy/"><i class="fa fa-instagram"></i></a></li>
             </ul>
          </div>
-         	<h6><a href="Resume.pdf" target="_blank">Download Resume</a></h6>
+         	<h6><a href="public/My-Resume.pdf" target="_blank">Download Resume</a></h6>
       </div>
 </header>
 </body>
