--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <hr>
 
 
-                    <p class="lead">I am passionate about coding, development, real-time.</p>
+                    <p class="lead">I am passionate about coding, development, real-time database.</p>
                     <p class="lead">I have worked on both software based projects and hardware projects some of my latest works include Argumented Reality on software side and Hand Gestures controlling bot on hardware side. You can follow me on
                      <a href=
                             "https://github.com/shivaraju07" target=
@@ -163,7 +163,7 @@
                     <h2>C/Python/Java</h2>
 
 
-                    <p>I am familiar in java and pyhon and there are some projects .</p>
+                    <p>I am familiar in java and python and there are some projects releated to them.</p>
                 </div>
             </div> <!-- / row -->
         </div><!-- /container -->
@@ -208,7 +208,7 @@
                                 <h2>Alarm Clock</h2>
 
 
-                                <p>it is a alram clock made in python with gui.</p>
+                                <p>it is a alarm clock with gui made in python.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
