--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
                     <p class="lead">I am passionate about coding, development, real-time database.</p>
-                    <p class="lead">I have worked on both software based projects and hardware projects some of my latest works include Argumented Reality on software side and Hand Gestures controlling bot on hardware side. You can follow me on
+                    <p class="lead">I have worked on both software based projects and hardware projects some of my latest works include Augumented Reality on software side and Hand Gestures controlling bot on hardware side. You can follow me on
                      <a href=
                             "https://github.com/shivaraju07" target=
                             "_blank">Github</a> to see what i am upto.</p>
@@ -348,7 +348,26 @@
                                 <h2>Online Treasure Hunt</h2>
 
 
-                                <p>It is a android app which works on argumented reality.</p>
+                                <p>It is a android app which works on augumented reality.</p>
+                            </div>
+                        </div>
+                        
+                              <!-- /Timeline Item-->
+                     <div class="timeline-item">
+                            <!--Icon inside the circle-->
+
+
+                            <div class="timeline-icon">
+                                <i class="fa fa-android"></i>
+                            </div>
+                            <!-- Content from timeline box and position (right or left)-->
+
+
+                            <div class="timeline-content Right">
+                                <h2>QuizApp</h2>
+
+
+                                <p>It is a android app which Works on realtime Database.It is similar as a quiz app.</p>
                             </div>
                         </div>
                       
