--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                             <!-- Content from timeline box and position (right or left)-->
 
 
-                            <div class="timeline-content Right">
+                            <div class="timeline-content right">
                                 <h2>QuizApp</h2>
 
 
