--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="social">
-                            <!--a href="http://www.twitter.com/"
+                            <a href="https://twitter.com/sivaraju07/"
                             target="_blank"><i class=
-                            "fa fa-twitter fa-3x"--></i></a>
+                            "fa fa-twitter fa-3x"></i></a>
                             <a href="https://plus.google.com/u/0/118044838761502119791"
                             target="_blank"><i class=
                             "fa fa-google-plus  fa-3x"--></i></a>
@@ -80,7 +80,7 @@
                 
                 <!--div class="col-md-4 text-center">
                     <p><a href=
-                    "public/Harsimar_resume.pdf" target=
+                    "public/MyResume_2.pdf" target=
                     "_blank">Download Resume</a></p>
                 </div-->
 
