--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h2>C/Python/Java</h2>
 
 
-                    <p>I am familiar in java and python and there are some projects releated to them.</p>
+                    <p>I am familiar with java and python and there are some projects releated to them.</p>
                 </div>
             </div> <!-- / row -->
         </div><!-- /container -->
