--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                 <h2>Online Treasure Hunt</h2>
 
 
-                                <p>It is a android app which works on augmented reality.</p>
+                                <p>It is a android game which works on augmented reality.</p>
                             </div>
                         </div>
                         
