--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                      <a href=
                             "https://github.com/shivaraju07" target=
                             "_blank">Github</a> to see what i am upto.</p>
-                    <p class="lead">I am undergraduate at National Institute Of Technology, Surat looking for internship opportunities. My <a href="public/My-Resume_2.docx" target="_blank">resume</a> is linked at the bottom in case you might want to take a look.</p>
+                    <p class="lead">I am undergraduate at National Institute Of Technology, Surat looking for internship opportunities. My <a href="public/My-Resume_2.pdf" target="_blank">resume</a> is linked at the bottom in case you might want to take a look.</p>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
@@ -395,7 +395,7 @@
 
                 <div class="col-md-4 text-center">
                     <h3><a href=
-                    "public/My-Resume_2.docx" target=
+                    "public/My-Resume_2.pdf" target=
                     "_blank">Download Resume</a></h3>
                 </div>
 
