--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <!-- sfdsdfThe above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta content="" name="description">
     <meta content="" name="author">
     <link href="../../favicon.ico" rel="icon">
